// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ThirdPartyLookupForm should display form in minimised view 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
        data-testid="standard-card"
        id="standard-card"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
          data-analyticsid="standard-card-content"
          data-testid="standard-card-content"
          id="standard-card-content"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              style="flex-grow: 1; width: 1px;"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5 css-d6c1k5-MuiTypography-root"
              >
                Test Form
              </h5>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                data-testid="minimise-toggle"
                tabindex="0"
                tooltip="Show form for Test Form"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="KeyboardArrowDownIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ThirdPartyLookupForm should display form without a secondary field 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
        data-testid="standard-card"
        id="standard-card"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
          data-analyticsid="standard-card-content"
          data-testid="standard-card-content"
          id="standard-card-content"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              style="flex-grow: 1; width: 1px;"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5 css-d6c1k5-MuiTypography-root"
              >
                Incites
              </h5>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                data-testid="minimise-toggle"
                tabindex="0"
                tooltip="Hide form for Incites"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="KeyboardArrowUpIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <form>
            <p>
              tip 1
            </p>
            <div>
              <h4>
                UTs
              </h4>
              <p />
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root primaryValue css-cmpglg-MuiFormControl-root-MuiTextField-root"
              >
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label=""
                    class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                    id="«r9»"
                    name="primaryValue"
                    placeholder="Enter one or more UTs, separated by a comma"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <p />
            <button
              aria-label="Submit to Incites"
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1k7sra0-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Submit to Incites
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ThirdPartyLookupForm should show form with non-minimised form 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
        data-testid="standard-card"
        id="standard-card"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
          data-analyticsid="standard-card-content"
          data-testid="standard-card-content"
          id="standard-card-content"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              style="flex-grow: 1; width: 1px;"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5 css-d6c1k5-MuiTypography-root"
              >
                Test Form
              </h5>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                data-testid="minimise-toggle"
                tabindex="0"
                tooltip="Hide form for Test Form"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="KeyboardArrowUpIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <form>
            <p />
            <div>
              <h4>
                UTs
              </h4>
              <p />
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root primaryValue css-cmpglg-MuiFormControl-root-MuiTextField-root"
              >
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label=""
                    class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                    id="«r4»"
                    name="primaryValue"
                    placeholder=""
                    required=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div>
              <h4>
                API Key
              </h4>
              <p />
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root secondaryValue css-cmpglg-MuiFormControl-root-MuiTextField-root"
              >
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label=""
                    class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                    id="«r5»"
                    name="secondaryValue"
                    placeholder=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <p />
            <button
              aria-label="Submit"
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1k7sra0-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Submit
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ThirdPartyLookupForm should toggle nested items on click 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
        data-testid="standard-card"
        id="standard-card"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
          data-analyticsid="standard-card-content"
          data-testid="standard-card-content"
          id="standard-card-content"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              style="flex-grow: 1; width: 1px;"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5 css-d6c1k5-MuiTypography-root"
              >
                Test Form
              </h5>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                data-testid="minimise-toggle"
                tabindex="0"
                tooltip="Show form for Test Form"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="KeyboardArrowDownIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ThirdPartyLookupForm should toggle nested items on click 2`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
        data-testid="standard-card"
        id="standard-card"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
          data-analyticsid="standard-card-content"
          data-testid="standard-card-content"
          id="standard-card-content"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              style="flex-grow: 1; width: 1px;"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5 css-d6c1k5-MuiTypography-root"
              >
                Test Form
              </h5>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                data-testid="minimise-toggle"
                tabindex="0"
                tooltip="Hide form for Test Form"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="KeyboardArrowUpIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <form>
            <p />
            <div>
              <h4>
                UTs
              </h4>
              <p />
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root primaryValue css-cmpglg-MuiFormControl-root-MuiTextField-root"
              >
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label=""
                    class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                    id="«rm»"
                    name="primaryValue"
                    placeholder=""
                    required=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div>
              <h4>
                API Key
              </h4>
              <p />
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root secondaryValue css-cmpglg-MuiFormControl-root-MuiTextField-root"
              >
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label=""
                    class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                    id="«rn»"
                    name="secondaryValue"
                    placeholder=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <p />
            <button
              aria-label="Submit"
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1k7sra0-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Submit
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ThirdPartyLookupForm should toggle nested items on click 3`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
        data-testid="standard-card"
        id="standard-card"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
          data-analyticsid="standard-card-content"
          data-testid="standard-card-content"
          id="standard-card-content"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              style="flex-grow: 1; width: 1px;"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5 css-d6c1k5-MuiTypography-root"
              >
                Test Form
              </h5>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                data-testid="minimise-toggle"
                tabindex="0"
                tooltip="Show form for Test Form"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="KeyboardArrowDownIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ThirdPartyLookupForm should use defaults when locale values are not provided 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
        data-testid="standard-card"
        id="standard-card"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
          data-analyticsid="standard-card-content"
          data-testid="standard-card-content"
          id="standard-card-content"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              style="flex-grow: 1; width: 1px;"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5 css-d6c1k5-MuiTypography-root"
              >
                this form
              </h5>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                data-testid="minimise-toggle"
                tabindex="0"
                tooltip="Test hide this form"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="KeyboardArrowUpIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <form>
            <p />
            <div>
              <h4>
                PF3
              </h4>
              <p />
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root primaryValue css-cmpglg-MuiFormControl-root-MuiTextField-root"
              >
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label=""
                    class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                    id="«r19»"
                    name="primaryValue"
                    placeholder=""
                    required=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div>
              <h4>
                SF3
              </h4>
              <p />
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root secondaryValue css-cmpglg-MuiFormControl-root-MuiTextField-root"
              >
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label=""
                    class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                    id="«r1a»"
                    name="secondaryValue"
                    placeholder=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <p>
              test bottom tip
            </p>
            <button
              aria-label="Submit"
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1k7sra0-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Submit
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ThirdPartyLookupForm should use locale values when provided 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
        data-testid="standard-card"
        id="standard-card"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
          data-analyticsid="standard-card-content"
          data-testid="standard-card-content"
          id="standard-card-content"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              style="flex-grow: 1; width: 1px;"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5 css-d6c1k5-MuiTypography-root"
              >
                this form
              </h5>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                data-testid="minimise-toggle"
                tabindex="0"
                tooltip="Hide form for this form"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="KeyboardArrowUpIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <form>
            <p />
            <div>
              <h4>
                PF 2
              </h4>
              <p>
                Tip 2p
              </p>
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root primaryValue css-cmpglg-MuiFormControl-root-MuiTextField-root"
              >
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label="aria pf2"
                    class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                    id="«r14»"
                    name="primaryValue"
                    placeholder="placeholder 2p"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div>
              <h4>
                SF2
              </h4>
              <p>
                tip 2S
              </p>
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root secondaryValue css-cmpglg-MuiFormControl-root-MuiTextField-root"
              >
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label="aria sf2"
                    class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                    id="«r15»"
                    name="secondaryValue"
                    placeholder="placeholder 2s"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <p />
            <button
              aria-label="Submit2"
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1k7sra0-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Submit2
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
